--- a/public/books.html
+++ b/public/books.html
@@ -1,7 +1,8 @@
 <div class = "formContainer">
     <h2>View Books</h2>
 
-    
-    <a  ng-repeat = "book in books" href = "#/books/{{book._id}}"><div class = "thisOption">{{book.title}}</div></a>
+    <a  ng-repeat = "book in books" href = "#/books/{{book._id}}">
+        <div class = "thisOption">{{book.title}}</div>
+    </a>
 </div>
 <div class = "formSpacer"></div>
