--- a/public/theBook.html
+++ b/public/theBook.html
@@ -1,8 +1,8 @@
 <div class = "formContainer">
     <h2>{{book.title}}</h2>
-    <h3>Description: </h3><br>
+    <h4>Description: </h4>
     {{book.description}} <br>
-    <h3>Author:  </h3><br>
+    <h4>Author:  </h4>
     {{book.writer}} <br>
     
     <button ng-click = "msgOwner()" class = "smallOutline submitBook" ng-hide = "doYouOwn === 1">Message Owner</button>
